[project]
name = "30-day-map-challenge"
version = "0.1.0"
description = "Notebooks for the 30 day map challenge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-sedona[db]==1.8.0",
    "pyspark==3.5.7",
    "pandas",
    "geopandas",
    "jupyter",
    "lonboard",
    "matplotlib",
    "palettable",
    "deltalake",
    "giso",
    "overturemaps"
]
